base/flask-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-flask-backend
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: demo-flask-backend
  template:
    metadata:
      labels:
        app: demo-flask-backend
    spec:
      containers:
      - name: demo-flask-backend
        image: 375147793846.dkr.ecr.ap-northeast-2.amazonaws.com/demo-flask-backend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
