base/nodejs-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-nodejs-backend
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: demo-nodejs-backend
  template:
    metadata:
      labels:
        app: demo-nodejs-backend
    spec:
      containers:
      - name: demo-nodejs-backend
        image: public.ecr.aws/y7c9e1d2/joozero-repo:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
