base/flask-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-flask-backend
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: "/contents/aws"
spec:
  selector:
    app: demo-flask-backend
  type: NodePort
  ports:
  - port: 8080       # 서비스가 생성할 포트
    targetPort: 8080 # 서비스가 접근할 pod의 포트
    protocol: TCP
